[package]
name = "qcorrelations-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qcorrelations"
path = "src/lib.rs"

[[bin]]
name = "calculations"
path = "src/main.rs"

[dependencies]
almost = "0.2.0"
nalgebra = "0.31"
rand = "0.8.5"
rand_distr = "0.4.3"
plotters = "0.3"
